--- a/index.html
+++ b/index.html
@@ -1,117 +1,142 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>KontoKraft — Privacy Policy</title>
+  <title>Privacy Policy — GS PWM</title>
   <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      line-height: 1.65;
-      color: #111;
-      margin: 0;
-      padding: 40px;
-      background: #f6f8fb;
-    }
-    .container {
-      max-width: 920px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 32px;
-      border-radius: 10px;
-      box-shadow: 0 8px 30px rgba(12, 20, 40, 0.06);
-    }
-    h1 { margin-top: 0; font-size: 28px; color: #1b1b1b; }
-    h2 { margin-top: 28px; font-size: 18px; color: #222; }
-    h3 { margin-top: 18px; font-size: 15px; color: #333; }
-    p { margin: 10px 0; }
-    ul { margin: 8px 0 16px 20px; }
-    a { color: #1a73e8; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    .minor { font-size: 13px; color: #666; }
-    .contact { background: #f1f8ff; border-left: 4px solid #cfe4ff; padding: 14px 16px; margin-top: 18px; border-radius: 6px; }
-    footer { margin-top: 30px; font-size: 13px; color: #666; }
-    code { background: #f3f4f6; padding: 2px 6px; border-radius: 4px; font-size: 13px; }
+    :root{--bg:#f7f9fb;--card:#ffffff;--accent:#0b67c2;--muted:#6b7280;--maxw:900px}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;padding:28px;background:var(--bg);color:#111}
+    .container{max-width:var(--maxw);margin:0 auto}
+    header{background:linear-gradient(90deg,#ffffff, #f1f6fb);padding:28px;border-radius:12px;box-shadow:0 6px 18px rgba(12,38,63,0.06);margin-bottom:18px}
+    h1{margin:0;font-size:1.6rem;color:var(--accent)}
+    p.lead{margin-top:8px;color:var(--muted)}
+    main{background:var(--card);padding:24px;border-radius:12px;box-shadow:0 6px 18px rgba(12,38,63,0.04)}
+    h2{color:#0f1724;margin-top:20px}
+    h3{color:#0f1724;margin-top:12px;font-size:1rem}
+    p,ul{color:#243041;line-height:1.55}
+    ul{padding-left:1.2rem}
+    footer{margin-top:18px;color:var(--muted);font-size:0.9rem}
+    a{color:var(--accent)}
+    .meta{font-size:0.95rem;color:var(--muted);margin-top:6px}
+    .small{font-size:0.95rem;color:var(--muted)}
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>KontoKraft — Privacy Policy</h1>
-    <p class="minor">Effective date: <strong>November 23, 2025</strong></p>
+    <header>
+      <h1>Privacy Policy — GS PWM</h1>
+      <p class="lead">Effective date: November 23, 2025</p>
+      <p class="meta">This Privacy Policy describes how GS PWM ("we", "our", or "us") collects, uses, discloses, and protects personal information when you use our mobile application and related services.</p>
+    </header>
 
-    <p>Welcome to <strong>KontoKraft</strong> ("we", "us", or "our"). Your privacy matters to us. This Privacy Policy describes how we collect, use, disclose, and safeguard personal information when you use the KontoKraft mobile application and related services (collectively, the "Service"). By using the Service, you agree to the collection and use of information in accordance with this policy.</p>
+    <main>
+      <section id="summary">
+        <h2>1. Summary</h2>
+        <p>We respect your privacy. This Policy explains what information we collect, why we collect it, how we use it, and the choices you have about your information. By using GS PWM, you agree to the collection and use of information in accordance with this policy.</p>
+      </section>
 
-    <h2>1. Information We Collect</h2>
+      <section id="information-we-collect">
+        <h2>2. Information We Collect</h2>
 
-    <h3>1.1 Information You Provide</h3>
-    <p>We may collect information you voluntarily provide when you use the Service, including:</p>
-    <ul>
-      <li><strong>Account Information:</strong> email address, display name, password (when you create an account).</li>
-      <li><strong>Financial Entries:</strong> daily ledger entries, transaction descriptions, amounts, categories, dates, photos or attachments you upload, and notes.</li>
-      <li><strong>Support Communications:</strong> messages, feedback, or other correspondence you send to us.</li>
-    </ul>
+        <h3>2.1 Information you provide</h3>
+        <ul>
+          <li><strong>Contact details:</strong> email address (e.g., when you contact support or register an account).</li>
+          <li><strong>User content:</strong> any information you submit through the app (notes, preferences, messages, etc.).</li>
+        </ul>
 
-    <h3>1.2 Automatically Collected Information</h3>
-    <p>When you use the Service, we may automatically collect certain data, such as:</p>
-    <ul>
-      <li><strong>Usage Data:</strong> features used, screens viewed, actions taken, timestamps, and crash reports.</li>
-      <li><strong>Device Information:</strong> device model, operating system and version, device identifiers, mobile network information, and app version.</li>
-      <li><strong>Log Data:</strong> technical logs and diagnostic information to help us troubleshoot and improve the Service.</li>
-    </ul>
+        <h3>2.2 Information we collect automatically</h3>
+        <ul>
+          <li><strong>Usage data:</strong> features used, session length, crash logs, and analytics events.</li>
+          <li><strong>Device information:</strong> device type, operating system and version, device identifiers, mobile network information, and locale settings.</li>
+          <li><strong>Log data:</strong> IP address, timestamps, and interaction records.</li>
+        </ul>
 
-    <h3>1.3 Location & Other Optional Data</h3>
-    <p>If you grant permission, we may collect approximate location data to support location-based features. You remain in control of location permissions via your device settings.</p>
+        <h3>2.3 Cookies and similar technologies</h3>
+        <p>We and third parties may use cookies, local storage, and similar technologies to operate and improve the app and to provide analytics. You can control cookie preferences in your device settings where applicable.</p>
+      </section>
 
-    <h3>1.4 Cookies and Local Storage</h3>
-    <p>We use cookies, local storage, and similar technologies to provide and improve the Service, remember user preferences, and enable analytics. Most cookies are necessary for basic functionality; you can manage cookie settings via your device or browser, though disabling some cookies may affect functionality.</p>
+      <section id="how-we-use">
+        <h2>3. How We Use Information</h2>
+        <ul>
+          <li>To provide, operate, and maintain GS PWM.</li>
+          <li>To improve, personalize, and develop new features.</li>
+          <li>To respond to your inquiries and provide customer support.</li>
+          <li>To monitor and analyze usage and trends to improve user experience.</li>
+          <li>To detect, prevent, and address technical issues, fraud, or abuse.</li>
+          <li>To comply with legal obligations and enforce our terms and policies.</li>
+        </ul>
+      </section>
 
-    <h2>2. How We Use Your Information</h2>
-    <p>We use personal information for the following purposes:</p>
-    <ul>
-      <li>To provide, operate, maintain, and improve the Service;</li>
-      <li>To process and store your daily accounting and inventory records;</li>
-      <li>To respond to your requests and provide customer support;</li>
-      <li>To send important notices and administrative messages;</li>
-      <li>To analyze usage patterns, conduct research, and improve features;</li>
-      <li>To detect, prevent, and respond to fraud, abuse, security incidents, or other harmful activity;</li>
-      <li>To comply with legal obligations and enforce our policies and terms of service.</li>
-    </ul>
+      <section id="sharing">
+        <h2>4. Sharing and Disclosure</h2>
+        <p>We will not sell your personal information. We may share information in the following limited circumstances:</p>
+        <ul>
+          <li><strong>Service providers:</strong> third-party vendors who perform services on our behalf (analytics, hosting, crash reporting).</li>
+          <li><strong>Legal reasons:</strong> if required by law, to respond to legal process, or to protect rights, property, or safety.</li>
+          <li><strong>Business transfers:</strong> in connection with mergers, acquisitions, financing, or asset sales—users will be notified if their personal information becomes subject to a different privacy policy.</li>
+        </ul>
+      </section>
 
-    <h2>3. Information Sharing and Disclosure</h2>
-    <p>We do not sell or rent your personal information. We may disclose information in limited circumstances:</p>
-    <ul>
-      <li><strong>Service Providers:</strong> trusted third-party vendors who perform services on our behalf (e.g., hosting, analytics, crash reporting, payment processing). They only access data necessary to provide their services and are bound by confidentiality obligations.</li>
-      <li><strong>Legal Requirements:</strong> when required by law, regulation, legal process, or government request, or to protect the rights, safety, or property of KontoKraft or others.</li>
-      <li><strong>Business Transfers:</strong> in connection with an organizational change such as a merger, acquisition, reorganization, sale, or bankruptcy—subject to confidentiality protections.</li>
-      <li><strong>With Your Consent:</strong> when you expressly request or authorize sharing (for example, exporting your data to an external accounting service).</li>
-    </ul>
+      <section id="third-parties">
+        <h2>5. Third-Party Services</h2>
+        <p>GS PWM may integrate or use third-party services (for example analytics providers, cloud hosting, or advertising partners). These third parties may collect information about you in accordance with their own privacy policies. We recommend reviewing the privacy notices of any third parties whose services we use.</p>
+      </section>
 
-    <h2>4. Data Retention</h2>
-    <p>We retain personal data for as long as necessary to fulfill the purposes outlined in this policy, to comply with legal obligations, resolve disputes, and enforce agreements. If you delete your account, we will delete or anonymize your personal data within a reasonable timeframe, except where retention is required by law or for legitimate business purposes (e.g., fraud prevention, regulatory compliance).</p>
+      <section id="security">
+        <h2>6. Security</h2>
+        <p>We implement reasonable administrative, technical, and physical safeguards designed to protect information from loss, theft, misuse, unauthorized access, disclosure, alteration, and destruction. However, no internet transmission or electronic storage is 100% secure—complete security cannot be guaranteed.</p>
+      </section>
 
-    <h2>5. Security</h2>
-    <p>We implement reasonable administrative, technical, and physical safeguards designed to protect personal data against unauthorized access, disclosure, alteration, and destruction. While we strive to protect your information, no system is completely secure. In the event of a data breach that affects your personal information, we will comply with applicable legal requirements to notify you and relevant authorities.</p>
+      <section id="data-retention">
+        <h2>7. Data Retention</h2>
+        <p>We retain personal information only as long as necessary to provide the service, comply with legal obligations, resolve disputes, and enforce our agreements. When information is no longer required, we delete or anonymize it.</p>
+      </section>
 
-    <h2>6. Analytics, Advertising & Third-Party Services</h2>
-    <p>We may use third-party analytics services (such as Firebase, Google Analytics, or similar) to analyze usage and improve the app. These providers may collect certain information about your use of the Service. We do not use personal data for advertising purposes without your consent. Please review third-party privacy policies for details about their data practices.</p>
+      <section id="your-choices">
+        <h2>8. Your Choices and Rights</h2>
+        <p>Depending on your location and local law, you may have certain rights regarding your personal data, including:</p>
+        <ul>
+          <li>The right to access, correct, or delete personal information we hold about you.</li>
+          <li>The right to object to or restrict certain processing of your data.</li>
+          <li>The right to obtain a copy of your data in a portable format.</li>
+        </ul>
+        <p>To exercise these rights or to ask questions about your data, contact us at <a href="mailto:myconsole56@gmail.com">myconsole56@gmail.com</a>. We will respond in accordance with applicable law.</p>
+      </section>
 
-    <h2>7. Your Choices & Rights</h2>
-    <p>Subject to local law, you may have rights regarding your personal information, including the right to:</p>
-    <ul>
-      <li><strong>Access:</strong> request a copy of the personal data we hold about you;</li>
-      <li><strong>Correction:</strong> request correction of inaccurate or incomplete data;</li>
-      <li><strong>Deletion:</strong> request deletion of your personal data (subject to legal exceptions);</li>
-      <li><strong>Portability:</strong> request a machine-readable copy of the data you provided;</li>
-      <li><strong>Restriction or Objection:</strong> request restriction of processing or object to certain uses;</li>
-      <li><strong>Opt-out:</strong> opt out of promotional communications at any time via unsubscribe links or by contacting us.</li>
-    </ul>
-    <p>To exercise these rights, contact us using the details below. We may require identity verification before processing certain requests.</p>
+      <section id="children">
+        <h2>9. Children's Privacy</h2>
+        <p>GS PWM is not intended for children under 13 (or a higher age where required by local law). We do not knowingly collect personal information from children. If we learn that we have collected a child’s personal information without parental consent, we will take steps to delete it.</p>
+      </section>
 
-    <h2>8. Children’s Privacy</h2>
-    <p>KontoKraft is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. If you learn that your child under 13 has provided us with personal information, please contact us so we can remove the information.</p>
+      <section id="international">
+        <h2>10. International Transfers</h2>
+        <p>Information we collect may be stored and processed in the United States or in other countries where we or our service providers operate. By using the app, you consent to the transfer of information to countries that may have different data protection laws than your country.</p>
+      </section>
 
-    <h2>9. International Transfers</h2>
-    <p>Your information may be stored and processed in countries other than where you live. When we transfer personal data internationally, we take reasonable steps to ensure it is handled securely and consistent with this Privacy Policy and applicable law (for example, by using contractual safeguards).</p>
+      <section id="changes">
+        <h2>11. Changes to This Privacy Policy</h2>
+        <p>We may update this Privacy Policy from time to time. When we do, we will revise the "Effective date" at the top. Significant changes will be communicated by prominent notice in the app or via the email address you provided, when required.</p>
+      </section>
 
-    <h2>10. California Privacy Rights (CCPA)</h2>
-    <p>If you are a California resident, you may have additional rights under the California Consumer Privacy Act (CCPA), such as the right to
+      <section id="contact">
+        <h2>12. Contact Us</h2>
+        <p>If you have questions, concerns, or requests regarding this Privacy Policy or our privacy practices, please contact us:</p>
+        <ul>
+          <li><strong>Email:</strong> <a href="mailto:myconsole56@gmail.com">myconsole56@gmail.com</a></li>
+          <li><strong>App:</strong> GS PWM</li>
+        </ul>
+      </section>
+
+      <section id="disclaimer">
+        <h2>13. Disclaimer</h2>
+        <p class="small">This Privacy Policy is provided for informational purposes and does not constitute legal advice. Depending on where you operate and the users you serve, additional disclosures or changes may be required by local privacy laws (for example, the GDPR, CCPA/CPRA, or other regional regulations). We recommend consulting with legal counsel to ensure full compliance with applicable laws.</p>
+      </section>
+    </main>
+
+    <footer>
+      <p>© GS PWM — Effective date: November 23, 2025</p>
+    </footer>
+  </div>
+</body>
+</html>
